--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
             </div>
             <div class="contact-details">
               <h3>E-mail</h3>
-              <p>aiag.gurgel@gmail.com</p>
+              <p>contato@nelsongurgel.com</p>
               <span>Resposta em até 2 horas</span>
             </div>
           </div>
@@ -431,7 +431,7 @@
               <input type="tel" id="phone" name="phone" placeholder="Seu telefone" required>
             </div>
 
-            <div class="form-group">
+          <!--  <div class="form-group">
               <select id="specialty" name="specialty" required>
                 <option value="">Selecione a especialidade</option>
                 <option value="plastica">Cirurgia Plástica</option>
@@ -446,7 +446,7 @@
                 <option value="nefrologia">Nefrologia</option>
               </select>
             </div>
-
+            -->
             <div class="form-group">
               <textarea id="message" name="message" placeholder="Mensagem (opcional)" rows="4"></textarea>
             </div>
